@@ -1,10 +1,6 @@
 version - 1.1
-
-	+ Per-admin changelog mailing (section, permissions, vlan, folder)
 	
 	+ API !
-	
-	+ Free range display for vlans
 
 
 version - 1.2
