@@ -12,6 +12,15 @@ $vlans = getAllVlans ();
 
 /* get custom fields */
 $custom = getCustomFields('vlans');
+
+/* check customfields */
+$ffields = json_decode($settings['hiddenCustomFields'], true);		
+if(is_array($ffields['vlans']))	{ $ffields = $ffields['vlans']; }
+else							{ $ffields = array(); }
+
+//size of custom fields
+$csize = sizeof($custom) - sizeof($ffields);
+
 ?>
 
 <h4><?php print _('Manage VLANs'); ?></h4>
@@ -28,7 +37,7 @@ if(!$vlans) {
 else {
 ?>
 
-<table id="vlanManagement" class="table table-striped table-top table-auto">
+<table id="vlanManagement" class="table slaves table-striped table-top">
 	<!-- headers -->
 	<tr>
 		<th><?php print _('Name'); ?></th>	
@@ -37,7 +46,9 @@ else {
 		<?php
 		if(sizeof($custom) > 0) {
 			foreach($custom as $field) {
-				print "<th class='customField hidden-xs hidden-sm'>$field[name]</th>";
+				if(!in_array($field['name'], $ffields)) {
+					print "<th class='customField hidden-xs hidden-sm'>$field[name]</th>";
+				}
 			}
 		}
 		?>
@@ -46,46 +57,77 @@ else {
 
 	<!-- VLANs -->
 	<?php
+	$m=0;
 	foreach ($vlans as $vlan) {
-	
-	//print details
-	print '<tr>'. "\n";
-	
-	print '	<td class="name">'. $vlan['name'] .'</td>'. "\n";
-	print '	<td class="number">'. $vlan['number'] .'</td>'. "\n";
-	print '	<td class="description">'. $vlan['description'] .'</td>'. "\n";	
-	
-	if(sizeof($custom) > 0) {
-		foreach($custom as $field) {
 
-			print "<td class='customField hidden-xs hidden-sm'>";
-					
-			//booleans
-			if($field['type']=="tinyint(1)")	{
-				if($vlan[$field['name']] == "0")		{ print _("No"); }
-				elseif($vlan[$field['name']] == "1")	{ print _("Yes"); }
-			} 
-			//text
-			elseif($field['type']=="text") {
-				if(strlen($vlan[$field['name']])>0)	{ print "<i class='fa fa-gray fa-comment' rel='tooltip' data-container='body' data-html='true' title='".str_replace("\n", "<br>", $vlan[$field['name']])."'>"; }
-				else											{ print ""; }
-			}
-			else {
-				print $vlan[$field['name']];
-				
-			}
-			print "</td>"; 
-
+		# show free vlans - start
+		if($m==0 && $vlan['number']!=1)	{
+			print "<tr class='success'>";
+			print "<td></td>";
+			print "<td colspan='".(3+$csize)."'>1 - ".($vlan['number']-1)." (".($vlan['number']-1).")</td>";
+			print "</tr>";
 		}
-	}
+		# show free vlans - before vlan
+		if($m>0)	{
+			if( ($vlans[$m]['number'])-($vlans[$m-1]['number']) >0 ) {
+			print "<tr class='success'>";
+			print "<td></td>";
+			print "<td colspan='".(3+$csize)."'>".($vlans[$m-1]['number']+1)." - ".($vlan['number']-1)." (".(($vlans[$m]['number'])-($vlans[$m-1]['number'])-1).")</td>";
+			print "</tr>";
+		}
+		}
 	
-	print "	<td class='actions'>";
-	print "	<div class='btn-group'>";
-	print "		<button class='btn btn-xs btn-default editVLAN' data-action='edit'   data-vlanid='$vlan[vlanId]'><i class='fa fa-pencil'></i></button>";
-	print "		<button class='btn btn-xs btn-default editVLAN' data-action='delete' data-vlanid='$vlan[vlanId]'><i class='fa fa-times'></i></button>";
-	print "	</div>";
-	print "	</td>";	
-	print '</tr>'. "\n";
+		//print details
+		print '<tr>'. "\n";
+		
+		print '	<td class="name">'. $vlan['name'] .'</td>'. "\n";
+		print '	<td class="number"><a href="'.create_link("tools","vlan",$vlan['vlanId']).'">'. $vlan['number'] .'</a></td>'. "\n";
+		print '	<td class="description">'. $vlan['description'] .'</td>'. "\n";	
+		
+		if(sizeof($custom) > 0) {
+			foreach($custom as $field) {
+				if(!in_array($field['name'], $ffields)) {
+	
+					print "<td class='customField hidden-xs hidden-sm'>";
+							
+					//booleans
+					if($field['type']=="tinyint(1)")	{
+						if($vlan[$field['name']] == "0")		{ print _("No"); }
+						elseif($vlan[$field['name']] == "1")	{ print _("Yes"); }
+					} 
+					//text
+					elseif($field['type']=="text") {
+						if(strlen($vlan[$field['name']])>0)	{ print "<i class='fa fa-gray fa-comment' rel='tooltip' data-container='body' data-html='true' title='".str_replace("\n", "<br>", $vlan[$field['name']])."'>"; }
+						else											{ print ""; }
+					}
+					else {
+						print $vlan[$field['name']];
+						
+					}
+					print "</td>"; 
+				}
+			}
+		}
+		
+		print "	<td class='actions'>";
+		print "	<div class='btn-group'>";
+		print "		<button class='btn btn-xs btn-default editVLAN' data-action='edit'   data-vlanid='$vlan[vlanId]'><i class='fa fa-pencil'></i></button>";
+		print "		<button class='btn btn-xs btn-default editVLAN' data-action='delete' data-vlanid='$vlan[vlanId]'><i class='fa fa-times'></i></button>";
+		print "	</div>";
+		print "	</td>";	
+		print '</tr>'. "\n";
+
+		# show free vlans - last
+		if($m==(sizeof($vlans)-1))	{
+			if($settings['vlanMax']>$vlan['number'])
+			print "<tr class='success'>";
+			print "<td></td>";
+			print "<td colspan='".(3+$csize)."'>".($vlan['number']+1)." - ".$settings['vlanMax']." (".(($settings['vlanMax'])-($vlan['number'])).")</td>";
+			print "</tr>";
+		}
+
+	
+	$m++;
 	
 	}
 }
